--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -53,3 +53,15 @@
         z-index: 100;
         display: none;
     }
+
+    .button-edit {
+        background-image: url(../../media/images/edit_pencil.png); /* 16px x 16px */
+        background-color: transparent; /* make the button transparent */
+        background-repeat: no-repeat;  /* make the background image appear only once */
+        background-position: 0px 0px;  /* equivalent to 'top left' */
+        border: none;           /* assuming we don't want any borders */
+        cursor: pointer;        /* make the cursor like hovering over an <a> element */
+        height: 32px;           /* make this the size of your image */
+        padding-left: 32px;     /* make text start to the right of the image */
+        vertical-align: middle; /* align the text vertically centered */
+    }
