gif carregando na pagina de login

--- a/asset/css/login.css
+++ b/asset/css/login.css
@@ -38,6 +38,14 @@
         display: none;
     }
 
+    #loading-img {
+        position: fixed;
+        top: 5px; 
+        right:2%;
+        z-index: 100;
+        display: none;
+    }
+
     /* .box-login form { */
         /* padding: 10px; */
     /* } */
